Fix bug: the blue subtotal box disappears on mobile view

--- a/app/assets/stylesheets/products/pricing.css.scss
+++ b/app/assets/stylesheets/products/pricing.css.scss
@@ -180,3 +180,23 @@ body {
     }
   }
 }
+
+@media (max-width: 993px){
+  body .pricing {
+    .cart-item.product{
+      .item-details{
+        margin-top:10px;
+      }  
+    } 
+  }  
+}
+
+@media (max-width: 992){
+  body .pricing {
+    .cart-item.product{
+      .item-details{
+        margin-top:10px;
+      }  
+    } 
+  } 
+}
